feat: file mngt page(s) functionalities finished

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -87,6 +87,30 @@
 			body {
 				font-feature-settings: "cv03", "cv04", "cv11";
 			}
+			.select-month-year {
+				width: 150px;
+				height: 30px;
+			}
+			.select-options {
+				width: 250px;
+				height: 30px
+			}
+			.search-button-file {
+				width: 60px;
+				height: 30px;
+			}
+			.search-button {
+				width: 60px;
+				height: 30px;
+				margin-top: 27px;
+			}
+			.file-attach {
+				width: 220px;
+			}
+			.select-date {
+				width: 210px;
+				height: 30px;
+			}
 			
 		</style>
 		<!-- litepicker library for making a datepicker -->
