--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -39,25 +39,13 @@ a.nav-link.active {
   background: white;
   outline: 0;
   /* border: 1px solid rgb(200, 200, 200); */
-  background-color: rgb(213, 213, 213);
-  margin-top: 20px;
+  /* background-color: rgb(213, 213, 213); */
+  /* margin-top: 20px; */
   /* width: 1300px; */
-  height: 700px;
+  height: 500px;
   width: 100%;
 }
-/* input::file-selector-button {
-  font-weight: 500;
-  color: rgb(255, 255, 255);
-  padding: 3px;
-  background-color: rgb(102, 115, 130);
-  border-radius: 4px;
-  transition: background-color 0.3s;
-  font-size: 12px;
-}
 
-input::file-selector-button:hover {
-  background-color: rgb(90, 90, 90);
-} */
 .item-details-label {
   margin-left: 10px;
   margin-top: 15px;
@@ -174,11 +162,3 @@ input::file-selector-button:hover {
     font-size: 0.7rem;
   }
 }
-
-/* .optionSelect {
-  padding: 3px;
-  text-align: left;
-  display: flex;
-  justify-content: flex-start;
-  font-size: 14px;
-} */
